# glovo_technical_test

./: .env.example  .gitignore  README.md  docker-compose.yml
db/: seed.sql
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  main.py
services/api-gateway/app/middleware/: auth.py
services/erp-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/erp-service/alembic/: env.py
services/erp-service/alembic/versions/: 0001_initial_schema.py
services/erp-service/app/: config.py  database.py  main.py  models.py  schemas.py  seed_runner.py
services/erp-service/app/routers/: articles.py  purchase_orders.py  stock.py
services/frontend/: Dockerfile  docker-entrypoint.sh  nginx.conf
services/frontend/src/: app.js  index.html  style.css
services/mcp-server/: Dockerfile  pyproject.toml
services/mcp-server/app/: config.py  erp_client.py  main.py
services/mcp-server/app/audit/: logger.py
services/mcp-server/app/security/: rbac.py  validator.py
services/mcp-server/app/semantic/: layer.py  schema_semantic.json
services/mcp-server/app/tools/: article_info.py  purchase_orders.py  stock.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/app/: config.py  main.py  schemas.py
services/orchestrator/app/agent/: orchestrator.py  prompts.py
services/orchestrator/app/history/: redis_history.py
