[project]
name = "orchestrator"
version = "0.1.0"
description = "Agente Orquestador — LangChain ReAct Agent + MCP Client + Redis history"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langchain>=1.0",
    "langchain-openai>=0.3",
    "langchain-mcp-adapters>=0.2",
    "langsmith>=0.3",
    "redis[asyncio]>=5.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
